--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -1,4 +1,4 @@
 <footer class="footer">
-  <p>This page was built using the Antora default UI.</p>
-  <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
+  <p>&copy;2021 Digital Ubiquity Capital. All Rights Reserved.</p>
+  <p>The informations, specifications and data models presented in this guide are the property of Digital Ubiquity Capital Inc. and are confidential to project participants and protected under non-disclosure agreements.</p>
 </footer>
